--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ./target:/app/target
     networks:
       - backend-assignee
+    restart: always
     environment:
       ASSIGNEE_MONGO_USERNAME: ${ASSIGNEE_MONGO_USERNAME}
       ASSIGNEE_MONGO_PASSWORD: ${ASSIGNEE_MONGO_PASSWORD}
@@ -26,6 +27,7 @@ services:
       - /mongo-data-assignee-ms:/data/db
     networks:
       - backend-assignee
+    restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${ASSIGNEE_MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${ASSIGNEE_MONGO_INITDB_ROOT_PASSWORD}
