--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: assignee-ms
     image: juliocardona/assignee-ms
     ports:
-      - "8081:8080"
+      - 8081:${ASSIGNEE_PORT}
     volumes:
       - ./target:/app/target
     networks:
