--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,7 @@ networks:
   backend-assignee:
     name: backend-assignee
     driver: bridge
+  backend-asset:
+    external: true
+    name: backend-asset
+    driver: bridge
