--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ./target:/app/target
     networks:
       - backend-assignee
+      - backend-asset
     restart: always
     environment:
       ASSIGNEE_MONGO_USERNAME: ${ASSIGNEE_MONGO_USERNAME}
@@ -34,4 +35,8 @@ services:
 networks:
   backend-assignee:
     name: backend-assignee
+    driver: bridge
+  backend-asset:
+    external: true
+    name: backend-asset
     driver: bridge
